[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }

[dependencies]
gethostname = "1.0"
log = { version = "0.4.25" }
os_info = "3"
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
serialize-to-javascript = "=0.1.1"
sys-locale = "0.3"
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Read information about the operating system."
edition = "2024"
license-file = "LICENSE"
links = "tauri-plugin-os-read-only"
name = "tauri-plugin-os-read-only"
repository = "https://github.com/tauri-apps/tauri"
rust-version = "1.85.0"
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
os_info = "3"
sys-locale = "0.3"
gethostname = "1.0"
serialize-to-javascript = "=0.1.1"
